--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<h1>{{title}}</h1>
-<app-appheader>
-    
-</app-appheader> 
+<title>{{title}}</title>
+<app-appheader></app-appheader>
+<app-cart></app-cart>
